# bt_mapeditorv3

./: .gitignore  CMakeLists.txt  hotkeys shaolin.xml  test_gif.py  vcpkg.json
brushes/icon/: bt_rme_icon.xpm
data/: creature_behaviors.xml  menubar.xml
data/1098/: borders.xml  doodads.xml  grounds.xml  items.otb  items.xml  tilesets.xml  walls.xml
docs/: area-decoration-system.md  doodad-editor-changes.md  doodad-editor-full-code.md  multiple-borders-system-en.md  multiple-borders-system.md
icons/: toolbar_mountain_overlay.xpm  toolbar_stair_direction.xpm  toolbar_wall_borders.xpm  worldboss_zone.xpm
source/: CMakeLists.txt  action.cpp  action.h  actions_history_window.cpp  advanced_replace_window.cpp  advanced_replace_window.h  application.cpp  application.h  area_creature_spawn.cpp  area_creature_spawn.h  area_creature_spawn_dialog.cpp  area_creature_spawn_dialog.h  area_decoration.cpp  area_decoration.h  area_decoration_dialog.cpp  area_decoration_dialog.h  area_decoration_rule_from_selection_dialog.cpp  area_decoration_rule_from_selection_dialog.h  artprovider.cpp  artprovider.h  border_editor_window.cpp  border_editor_window.h  browse_tile_window.cpp  browse_tile_window.h  brush.cpp  brush.h  brush_manager_panel.cpp  brush_manager_panel.h  brush_manager_window.cpp  brush_manager_window.h  brush_tips_window.cpp  brush_tips_window.h  camera_path.cpp  camera_path.h  carpet_brush.cpp  carpet_brush.h  chunk_tracker.cpp  chunk_tracker.h  client_version.cpp  client_version.h  (+118 more)
vcproj/Project/: RME.rc  RME.vcxproj  RME.vcxproj.filters
